[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menus/scripts/Range.gd" type="Script" id=1]
[ext_resource path="res://assets/range_plus.png" type="Texture" id=2]
[ext_resource path="res://assets/transparent_pixel.png" type="Texture" id=3]
[ext_resource path="res://Menus/scripts/RangePlusButton.gd" type="Script" id=4]
[ext_resource path="res://assets/range_minus.png" type="Texture" id=5]
[ext_resource path="res://Menus/scripts/RangeMinusButton.gd" type="Script" id=6]
[ext_resource path="res://assets/CMONNEAR.TTF" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Node2D" type="Node2D"]

position = Vector2( 90, 0 )
script = ExtResource( 1 )
maxProgress = null
progress = null
range_name = "Node2D"
editable = null

[node name="RangePlusButton" type="TextureButton" parent="." index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -40.0
margin_top = -39.0
margin_right = 40.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
expand = true
stretch_mode = 3
script = ExtResource( 4 )
_sections_unfolded = [ "Material", "Rect", "Size Flags", "Textures", "Theme", "Visibility" ]

[node name="RangeMinusButton" type="TextureButton" parent="." index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -134.0
margin_top = -39.0
margin_right = -54.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 3 )
expand = true
stretch_mode = 3
script = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="RangeValueLabel" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = -25.0
margin_right = 127.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "Rect", "Size Flags", "Theme", "custom_colors", "custom_fonts" ]

[node name="RangeNameLabel" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -576.0
margin_top = -21.0
margin_right = -157.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Node2D"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Material", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]


